Made CMake scripts apply settings target-specific

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,26 +14,27 @@
 # limitations under the License.
 #
 
-project (nx-firmware CXX)
+include(cmake/build_utils.cmake)
+###
+# Build Values
+###
+#
+# C++ sources: list(APPEND CXX_SOURCES ...)
+# C sources:   list(APPEND C_SOURCES ...)
+# C/C++ flags: Append(CC_FLAGS ...)
+# C++ flags:   Append(CXX_FLAGS ...)
+# C flags:     Append(C_FLAGS ...)
+# Link flags:  Append(LINK_FLAGS ...)
+#
+# Clear all:   ClearBuildValues()
+#
+###
+
+project (nac-firmware CXX C)
 cmake_minimum_required(VERSION 2.6.2)
 
-# Appends values to a custom-delimited string
-macro(AppendDelimited var delimiter)
-  foreach(value ${ARGN})
-    set("${var}" "${${var}}${delimiter}${value}")
-  endforeach()
-endmacro()
-# Appends values to a space-delimited string
-macro(Append var)
-  AppendDelimited("${var}" " " ${ARGN})
-endmacro()
-# Appends values to a semicolon-delimited string
-macro(AppendSemi var)
-  AppendDelimited("${var}" ";" ${ARGN})
-endmacro()
-
 # target name
-set(TARGET "nx-firmware")
+set(TARGET "${CMAKE_PROJECT_NAME}")
 # the program binary's format
 set(FORMAT "ihex")
 # Debounce time (see keyswitch spec) 5ms is good for cherry mx switches
@@ -58,82 +59,72 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_COMPILER_IS_CLANG)
   set(GCC_COMPAT "1")
 endif()
 
-set(EXTRA_OUTPUTS "")
 # Compilation settings
 if(GCC_COMPAT)
-  # Create CCFLAGS (unused by default) to store common C/C++ flags
-  set(CCFLAGS "")
   # pass in hardware settings
-  Append(CCFLAGS "-mmcu=${MCU} -DF_CPU=${F_CPU}")
+  Append(CC_FLAGS "-mmcu=${MCU} -DF_CPU=${F_CPU}")
   # enable common warnings
-  Append(CCFLAGS "-Wall")
+  Append(CC_FLAGS "-Wall")
   # pack all structure members together without holes
-  Append(CCFLAGS "-fpack-struct")
+  Append(CC_FLAGS "-fpack-struct")
   # allocate to an 'enum' type only as many bytes as it needs for the declared
   # range of possible values"
-  Append(CCFLAGS "-fshort-enums")
+  Append(CC_FLAGS "-fshort-enums")
   # place each function or data into its own section in the output file if the
   # target supports arbitrary sections.  for linker optimizations, and
   # discarding unused code.
-  Append(CCFLAGS "-ffunction-sections -fdata-sections")
+  Append(CC_FLAGS "-ffunction-sections -fdata-sections")
   # set options
-  Append(CCFLAGS "-DMAKEFILE_BOARD='${BOARD}'")
-  Append(CCFLAGS "-DMAKEFILE_KEYBOARD='${KEYBOARD}'")
-  Append(CCFLAGS "-DMAKEFILE_KEYBOARD_LAYOUT='${LAYOUT}'")
-  Append(CCFLAGS "-DMAKEFILE_DEBOUNCE_TIME='${DEBOUNCE_TIME}'")
-  Append(CCFLAGS "-DMAKEFILE_LED_BRIGHTNESS='${LED_BRIGHTNESS}'")
+  Append(CC_FLAGS "-DMAKEFILE_BOARD='${BOARD}'")
+  Append(CC_FLAGS "-DMAKEFILE_KEYBOARD='${KEYBOARD}'")
+  Append(CC_FLAGS "-DMAKEFILE_KEYBOARD_LAYOUT='${LAYOUT}'")
+  Append(CC_FLAGS "-DMAKEFILE_DEBOUNCE_TIME='${DEBOUNCE_TIME}'")
+  Append(CC_FLAGS "-DMAKEFILE_LED_BRIGHTNESS='${LED_BRIGHTNESS}'")
 
   # Set language specific flags for cmake
-  Append(CMAKE_C_FLAGS "-std=gnu99 -Wstrict-prototypes")
-  Append(CMAKE_CXX_FLAGS "-std=gnu++11")
+  Append(C_FLAGS "-std=gnu99 -Wstrict-prototypes")
+  Append(CXX_FLAGS "-std=gnu++11")
 
-  # Create LINKFLAGS (unused by default) to store desired linker flags
-  set(LINKFLAGS "")
+  # Create LINK_FLAGS from our CC_FLAGS (needed for gcc's -flto if we use it) 
+  set(LINK_FLAGS "${CC_FLAGS}")
   # generate a link map, with a cross reference table
-  Append(LINKFLAGS "-Wl,-Map=${TARGET}.map,--cref")
-  AppendSemi(EXTRA_OUTPUTS "${TARGET}.map")
+  Append(LINK_FLAGS "-Wl,-Map=${TARGET}.map,--cref")
+  # make sure the map is cleaned
+  AddCleanFiles("${TARGET}.map")
   # for some linker optimizations
-  Append(LINKFLAGS "-Wl,--relax")
+  Append(LINK_FLAGS "-Wl,--relax")
   # discard unused functions and data
-  Append(LINKFLAGS "-Wl,--gc-sections")
+  Append(LINK_FLAGS "-Wl,--gc-sections")
 
-  # Create GENDEPFLAGS (unused by default) to enable generating dep files
-  set(GENDEPFLAGS "-MMD -MP -MF ${TARGET}.dep")
-  AppendSemi(EXTRA_OUTPUTS "${TARGET}.dep")
+  # Add extra CC_FLAGS we don't want in LINK_FLAGS
+  # enable generating dep files
+  Append(CC_FLAGS "-MMD -MP -MF ${TARGET}.dep")
+  # make sure the dep is cleaned
+  AddCleanFiles("${TARGET}.dep")
 endif()
 
 
-# build the elf
-add_executable("${TARGET}.elf" "src/main.cc")
-set_target_properties("${TARGET}.elf" PROPERTIES COMPILE_FLAGS
-    "${CCFLAGS} ${GENDEPFLAGS}")
-set_target_properties("${TARGET}.elf" PROPERTIES LINK_FLAGS
-    "${CCFLAGS} ${LINKFLAGS}")
+list(APPEND CXX_SOURCES "src/main.cc")
 
-# create the hex
-add_custom_command(TARGET "${TARGET}.elf" POST_BUILD COMMAND
+# build the elf
+AddProgram("${TARGET}.elf")
+# run extra post-build commands
+add_custom_command(TARGET "${TARGET}.elf" POST_BUILD
+    # create the hex
+    COMMAND
     "${CMAKE_OBJCOPY}" -O "${FORMAT}"
     -R .eeprom -R .fuse -R .lock -R .signature
-    "${TARGET}.elf" "${TARGET}.hex")
-AppendSemi(EXTRA_OUTPUTS "${TARGET}.hex")
-
-# create the eep
-add_custom_command(TARGET "${TARGET}.elf" POST_BUILD COMMAND
+    "${TARGET}.elf" "${TARGET}.hex"
+    # create the eep
+    COMMAND
     "${CMAKE_OBJCOPY}" -O "${FORMAT}"
     -j .eeprom
     --set-section-flags=.eeprom="alloc,load"
     --change-section-lma .eeprom=0
     --no-change-warnings
-    "${TARGET}.elf" "${TARGET}.eep")
-AppendSemi(EXTRA_OUTPUTS "${TARGET}.eep")
-
-# Set the extra outputs so things clean correctly
-set_directory_properties(PROPERTY ADDITIONAL_MAKE_CLEAN_FILES
-    "${EXTRA_OUTPUTS}")
-
-# Show the sizes
-if (CMAKE_SYSTEM_NAME STREQUAL "AVR")
-  add_custom_command(TARGET "${TARGET}.elf" POST_BUILD COMMAND
+    "${TARGET}.elf" "${TARGET}.eep"
+    # show the sizes
+    COMMAND
     "${AVR_SIZE_TOOL}" --target="${FORMAT}" "${TARGET}.hex" "${TARGET}.eep")
-endif()
-
+# make sure the hex and eep are cleaned
+AddCleanFiles("${TARGET}.hex" "${TARGET}.eep")
